# kk-openssf-best-practices

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
src/semverbump/: __init__.py  cli.py
tests/: test_bump.py
