[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "semver-bump"
version = "0.1.0"
description = "A tiny command-line tool for bumping semantic version numbers."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = ["semver", "versioning", "cli"]
authors = [{ name = "The semver-bump Authors" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Build Tools",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.urls]
Homepage = "https://github.com/OWNER/REPO"
Issues = "https://github.com/OWNER/REPO/issues"

[project.scripts]
semverbump = "semverbump.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
